Change user model. Add validation on cars.js findModel function. Create helper function to clear form. Handle create-subscriptions route. Change: use getAllPrices instead getAllProducts. Working on create subscriptions form.

--- a/views/dashboards/mainDashboard.ejs
+++ b/views/dashboards/mainDashboard.ejs
@@ -1129,7 +1129,7 @@
                                     </div>
                                     <div class="tab-pane" id="plan" role="tabpanel" aria-labelledby="plan">
                                         <%- include('../partials/subscriptions/subscriptions.ejs' , {user, hasSubscription : user?.hasSubscription, 
-                                            products, stripeSubscription, membershipStatus, products}); %>
+                                            prices, subscriptions}); %>
                                     </div>
                                 </div>
 
