--- a/views/partials/dataTable.ejs
+++ b/views/partials/dataTable.ejs
@@ -4,15 +4,29 @@
 <script src="https://cdn.datatables.net/1.11.4/js/dataTables.bootstrap5.min.js"></script>
 <script>
     $(document).ready(function () {
-        
-    let dateColumn = null;
-    <% if (typeof dateColumn == 'number') {%>
-        dateColumn = <%= dateColumn %>;
-    <% } %>
     
     $('<%= tableID %>').DataTable({
-        columnDefs: dateColumn ? [{ type: 'date', 'targets': [dateColumn] }] : '',
-        order: dateColumn ? [[dateColumn, 'desc']] : '',
+        <% if (typeof dateColumn == 'number') { %>
+            columnDefs: [
+
+                { type: 'date', 'targets': [<%= dateColumn %>] }
+            ],
+                order: [[<%= dateColumn %>, 'desc']],
+        <% } %> 
+
+        <% if (typeof paging == 'boolean') { %>
+            "paging": <%= paging %>,
+        <% } %>
+        <% if (typeof info == 'boolean') { %>
+            "info": <%= info %>,
+        <% } %>
+        <% if (typeof searching == 'boolean') { %>
+            "searching": <%= searching %>,
+        <% } %>
+
+        <% if (typeof ordering == 'boolean') { %>
+            "ordering": <%= ordering %>,
+        <% } %>
         "language": {
             "emptyTable": "<%= lingua.emptyTable%>",
             "info": "<%= lingua.infoNotEmpty%>",
@@ -31,7 +45,36 @@
                 "next": "<%= lingua.next%>",
                 "previous": "<%= lingua.previous%>"
             },
-        }
+        },
+        <% if (typeof footerCheckout == 'boolean' && footerCheckout == true) { %>
+            "footerCallback": function (row, data, start, end, display) {
+                var api = this.api();
+
+                // Remove the formatting to get integer data for summation
+                var intVal = function (i) {
+                    return typeof i === 'string' ?
+                        i.replace(/[\$,]/g, '') * 1 :
+                        typeof i === 'number' ?
+                            i : 0.0;
+                };
+
+                quantity = api.column(0).data().count();
+                $(api.column(0).footer()).html(
+                    'Quantity: ' + quantity
+                );
+                // Total over all pages
+                total = api
+                    .column(2)
+                    .data()
+                    .reduce(function (a, b) {
+                        return (intVal(a) + intVal(b)).toFixed(2);
+                    }, (0).toFixed(2));
+                // Update footer
+                $(api.column(2).footer()).html(
+                    '$' + total
+                );
+            }
+        <% } %>
     });
     });
 </script>
