--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -40,11 +40,11 @@
                     <div class="col-lg-8 mx-auto">
                         <div class="auth-form-light text-left py-5 px-4 px-sm-5">
 
-                            <a class="float-start btn-link" id="close-registration" href="/home">
+                            <a class="btn btn-outline-primary btn-icon-text float-start" id="close-registration" href="/home">
                                 <i class="fa-solid fa-angle-left"></i>
-                                Back to Pricing
+                                Pricing List
                             </a>
-                            <a class="float-end btn-link" id="close-registration" href="/">
+                            <a class="btn btn-outline-primary btn-icon-text float-end" id="close-registration" href="/">
                                 Login <i class="fa-solid fa-arrow-right-to-bracket"></i>
                             </a>
                             <div class="brand-logo text-center">
