--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,7 +76,7 @@
         </nav>
         <!-- partial -->
         <div class="container-fluid content-wrapper p-0">
-            <div class="container p-5 pt-0">
+            <div class="container p-4 pt-0">
                 <div class="row">
                     <% if(prices) { %>
                     <% for(price of prices) { %>
@@ -116,8 +116,8 @@
                             </div>
                             <div class="card-footer text-center"
                                 style="background-color:transparent !important; border-top: none">
-                                <button class="btn btn-outline-primary btn-lg select-product-btn"
-                                    value="<%- price.id%>">Select</button>
+                                <button class="btn btn-primary btn-lg select-product-btn m-2"
+                                    value="<%- price.id%>">Create Subscriptions</button>
                             </div>
                         </div>
                     </div>
