Create completeCheckoutSuccess route and function. Handle addCar function errors. Change user.model schema. Populate the subscriptions cars on get user functions. Function addSubscriptionToUser. Fix permissions to edit/delete car. Optimize setStripeInfoToUser function. Remove prices from setStripeInfoToUser. Optimize createCheckoutSession function. Optimize cars route. Fix subscriptions partials to show the info.

--- a/views/partials/subscriptions/information.ejs
+++ b/views/partials/subscriptions/information.ejs
@@ -16,10 +16,20 @@
         </thead>
         <tbody>
             <tr>
-                <td>Plan</td>
+                <td>Products/Cars</td>
                 <td>
-                    <%- stripeSubscription?.product?.name%>
-
+                    <% for(item of stripeSubscription.items.data) { %>
+                    <p>
+                        <b><%- item.price.product.name %></b>
+                    </p>
+                    <ul class="mb-0">
+                        <% for(car of item.cars) { %>
+                        <li style="margin-left: 10px">
+                            <%- car.brand %> - <%- car.model %> - <%- car.plate %>
+                        </li>
+                        <% } %>
+                    </ul>
+                    <% } %>
                 </td>
             </tr>
             <tr>
